fixed white space between nav bar and card/portfolio section

--- a/react-portfolio/src/components/aboutme/aboutme.css
+++ b/react-portfolio/src/components/aboutme/aboutme.css
@@ -15,6 +15,7 @@
     margin-top: 1.25em;
     margin-bottom: 1.25em;
     position: relative;
+    min-height: 20vh;
 
 }
 
